5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1801_2574.log
== TEST (2019-06-12 20:47:18) 
-- CODE:
a = input("Senha: ")
i = 0 
b = len(a)
for x in a:
	while(b>=i)and(b>=8):
		if(v[x].islower())and (a[x].isupper()):
			print("SENHA VALIDA")
		i+=1
		
	else:
		print("SENHA INVALIDA ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(v[x].islower())and (a[x].isupper()):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:47:45) 
-- CODE:
a = input("Senha: ")
i = 0 
b = len(a)
for x in a:
	while(b>=i)and(b>=8):
		if(a[x].islower())and (a[x].isupper()):
			print("SENHA VALIDA")
		i+=1
		
	else:
		print("SENHA INVALIDA ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(a[x].islower())and (a[x].isupper()):
TypeError: string indices must be integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
